--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,8 @@
     RewriteEngine On
     RewriteBase /
 
-    # Redirect to resume/index.html
-    RewriteRule ^resume$ resume/index.html [L]
+    # Redirect to /resume/index.html
+    RewriteRule ^resume$ /resume/index.html [L]
 
     # Handle 404 errors
     ErrorDocument 404 /404.html
