--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-resume_archive/*
-node_modules/*
 resume/web/node_modules/*
 resume/web/lint_errors.txt
 app_template/web/node_modules/*
+reader/api/node_modules/*
+reader/node_modules/*
