--- a/reader/package.json
+++ b/reader/package.json
@@ -1,48 +1,16 @@
 {
-  "dependencies": {
-    "@aws-sdk/client-polly": "^3.282.0",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.11.8",
-    "@mui/styles": "^5.11.12",
-    "axios": "^1.3.4",
-    "concurrently": "^7.6.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "moment": "^2.29.4",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20",
-    "react": "^18.2.0",
-    "react-audio-voice-recorder": "^1.0.4",
-    "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.5",
-    "react-router-dom": "^6.8.1",
-    "react-textarea-autosize": "^8.4.0",
-    "rehype-raw": "^6.1.1",
-    "xlsx": "^0.18.5"
-  },
+  "name": "reader",
+  "version": "1.0.0",
+  "description": "Reader",
   "scripts": {
-    "build": "npx react-scripts build",
-    "start": "node node/index.js",
-    "watch": "concurrently \"nodemon node/index.js\" \"npx react-scripts start\"",
-    "watch:build": "npx react-scripts start"
+    "build:web": "cd web && npm run build",
+    "build:api": "cd api && npm run build",
+    "start": "concurrently \"npm run build:api\" \"npm run build:web\""
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@mui/icons-material": "^5.11.11",
-    "dotenv-expand": "^10.0.0"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^8.2.2"
   }
 }
