--- a/reader/web/package.json
+++ b/reader/web/package.json
@@ -4,9 +4,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.11.8",
+    "@mui/material": "^5.15.11",
     "axios": "^1.3.4",
-    "concurrently": "^7.6.0",
     "react": "^18.1.0",
     "react-audio-voice-recorder": "^1.0.4",
     "react-countdown": "^2.3.5",
@@ -18,10 +17,22 @@
   "scripts": {
     "build": "npx react-scripts build",
     "start": "node node/index.js",
-    "dev": "concurrently \"nodemon node/index.js\" \"npx react-scripts start\"",
+    "dev": "npx react-scripts start",
     "dev:build": "npx react-scripts start"
   },
   "devDependencies": {
     "@mui/icons-material": "^5.11.11"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
