--- a/tables/web/package.json
+++ b/tables/web/package.json
@@ -19,10 +19,12 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "babel-loader": "^9.1.3",
     "react": "^18.1.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "typescript": "^4.7.3",
     "vite": "^5.1.4",
