--- a/zen/package.json
+++ b/zen/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build:web": "cd web && npm run build",
     "build:api": "cd api && npm run build",
-    "start": "concurrently \"npm run build:api\" \"npm run build:web\""
+    "start": "concurrently \"npm run build:api\" \"npm run build:web\"",
+    "dev": "concurrently \"cd web && npm run dev\" \"cd api && npm run start\""
   },
   "keywords": [],
   "author": "",
