--- a/zen/web/package.json
+++ b/zen/web/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^9.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "recorder-js": "^1.0.7",
     "typescript": "^4.7.3",
     "vite": "^5.1.4",
     "webpack": "^5.90.3",
