--- a/zen/web/package.json
+++ b/zen/web/package.json
@@ -24,6 +24,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "babel-loader": "^9.1.3",
+    "framer-motion": "^11.3.17",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "recorder-js": "^1.0.7",
